# chrono-notes

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
assets/: windows_app.rc
docs/: PROJECT_STATUS_AND_PLAN.md
qml/: AiSummaryPanel.qml  AppTitleBar.qml  DetailPanel.qml  EventComposer.qml  Main.qml  NoteListPanel.qml  NoteRow.qml  OverlayPanel.qml  ProgressStats.qml  ProjectTreePanel.qml  SearchBar.qml  SettingsPanel.qml  StageTabs.qml  TinyMeta.qml  ToolPill.qml  WindowButton.qml
src/: ai_client.cpp  ai_client.h  backup_service.cpp  backup_service.h  config.cpp  config.h  note_store.cpp  note_store.h  note_view.cpp  note_view.h  project_tree_model.cpp  project_tree_model.h  qt_main.cpp  qt_note_app.cpp  qt_note_app.h
tests/: config_tests.cpp  note_store_tests.cpp  note_view_tests.cpp  project_tree_model_tests.cpp  qt_note_app_tests.cpp
tests/qml/: tst_EventComposer.qml  tst_NoteListPanel.qml  tst_SettingsPanel.qml
tools/: package_release.ps1
